@@ -22,10 +22,7 @@ EXTRA_DIST = \
 	
 ## @end 1
 AUTOMAKE_OPTIONS = gnu
-if USE_PLUGIN
-PLUGIN_DIR = plugin
-endif
-SUBDIRS = src po data $(PLUGIN_DIR)
+SUBDIRS = src po data plugin
 
 ## @start 1
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure config.h.in $(AUX_DIST)
