@@ -1,7 +1,3 @@
-if USE_PLUGIN
-
 SUBDIRS = \
-	src \
-	data
-
-endif
+          src \
+          data
